Updated references on all html files and updated CSS to align and size objects correctly.

--- a/style.css
+++ b/style.css
@@ -66,19 +66,19 @@ body {
 }
 
 .map-section img {
-  width: 100%;
-  height: auto;
+  width: 90%;
+  height: 200px;
   border: 2px solid #444;
   border-radius: 5px;
   display: block;
 }
 
 .image-section img {
-  width: 100%;
-  height: auto;
+  width: 90%;
+  height: 200px;
   border: 2px solid #444;
   border-radius: 5px;
-  display: block;
+  display: flex;
 
 }
 
